--- a/provisioners/digitalocean.yml
+++ b/provisioners/digitalocean.yml
@@ -9,11 +9,16 @@
     region_id: "{{ item.region | default('sfo1') }}"
     unique_name: yes
     ssh_key_ids: "{{ item.ssh_key_ids }}"
+    wait: true
   register: do_response
   with_items: "{{ droplets }}"
+  loop_control:
+    label: "{{ do_response.droplet.ip_address }}"
 
-- name: Add new host to our inventory.
+- name: Add hosts to inventory
   add_host:
-    name: "{{ item.droplet.ip_address }}"
-    groups: do,nodes
-  with_items: "{{ do_response.results }}"
+    name: "{{ item.1.droplet.ip_address }}"
+    groups: "do,nodes,{{ droplets[item.0].group }},{{ item.1.changed | ternary(',new-nodes', '') }}"
+  with_indexed_items: "{{ do_response.results }}"
+  loop_control:
+    label: "{{ item.1.droplet.ip_address }}"
