--- a/instances.yml
+++ b/instances.yml
@@ -1,3 +1,3 @@
 droplets:
-  - { name: webserver-1, ssh_key_ids:  16105703, group: webservers }
+  - { name: webserver-1, group: webservers }
 deploy_user_passwd: some-encrypted-passwd
